kustomize/web-repo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: image-web-server
  namespace: web-server
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
