kustomize/web-repo/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-repo
  namespace: web-server
spec:
  parentRefs:
    - kind: Gateway
      name: edge
      namespace: system-gateway
      sectionName: web-http
    - kind: Gateway
      name: edge
      namespace: system-gateway
      sectionName: web-https
  hostnames:
    - web-repo.${external_domain}
  rules:
    - backendRefs:
        - kind: Service
          name: image-web-server
          port: 80
