kustomize/web-repo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-repo
  namespace: web-server
spec:
  ingressClassName: nginx
  rules:
    - host: web-repo.homelab.local
      http:
        paths:
          - backend:
              service:
                name: image-web-server
                port:
                  number: 80
            path: /
            pathType: Prefix
